# someip-workspace

./: .dockerignore  .gitignore  AGENTS.md  NOTICE  README.md  start-workbench.sh
.agents/skills/repo-hygiene/: SKILL.md
.agents/skills/someip-runtime/: SKILL.md
configs/: commonapi.ini  vsomeip.json
docker/: Dockerfile.example  Dockerfile.project  Dockerfile.runtime  entrypoint.sh  wireshark-compose.yml
docs/: generated-vs-authored.md  getting-started.md  glossary.md  index.md  project-creation.md  project-model.md  troubleshooting.md  workbench-workflow.md
examples/DoorControl/: CMakeLists.txt
examples/DoorControl/fidl/: DoorControl.fdepl  DoorControl.fidl
examples/DoorControl/src/: DoorControlClient.cpp  DoorControlService.cpp  DoorControlStubImpl.cpp  DoorControlStubImpl.hpp
projects/climate-control/: project.yaml
projects/climate-control/franca/: ClimateControl.fdepl  ClimateControl.fidl
projects/climate-control/scenarios/: comfort-flow.yaml
projects/door-control/: project.yaml
projects/door-control/franca/: DoorControl.fdepl  DoorControl.fidl
projects/door-control/scenarios/: basic-lock-flow.yaml
scripts/: 01-setup.sh  02-build-libs.sh  03-download-generators.sh  check-web-api.sh  export-openapi.sh  generate-web-api.sh
services/api/: main.py  requirements.txt
services/api/openapi/: v1.json
services/api/routes/: http_errors.py
services/api/routes/v1/: __init__.py  authoring.py  common.py  pipeline.py  projects.py  simulations.py  workbench.py
services/api/schemas/: __init__.py  workflow.py
services/api/services/: build_service.py  dashboard_service.py  docker_manager.py  example_catalog.py  franca_service.py  generator_service.py  job_service.py  preset_catalog.py  project_service.py  simulation_service.py  workflow_service.py
services/api/tests/: test_workbench_services.py
services/web/: components.json  index.html  openapi-config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
services/web/src/: main.tsx  styles.css
services/web/src/components/: layout.tsx  workbench-editor.tsx
(+37 files in other folders)
